src/main/resources/static/css/navbar.css
.nav {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 5;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    height: 75px;
    width: 100vw;
    padding: 0;
    color: #fff;
    font-family: Poppin, Inter, sans-serif;
    font-size: 1.3rem;
    text-shadow: 0 0 5px var(--primary);
    background: rgba(0, 0, 0, .2);
    backdrop-filter: blur(10px);
    padding-right: 40px;

}

.logo-wrap {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 0 10px 15px;
    width: 35vw;
}
.icon {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 0.9em;
    overflow: hidden;
    min-width: 70px;
    max-width: 70px;
    aspect-ratio: auto;
    background-color: var(--cta2);
}
.logo {
    display: flex;
    align-items: center;
    height: 100%;
    width: 43vw;
    padding-left: 15px;
    color: #fff;
    border-radius: 10px;
    font-family: Barrio, Inter, sans-serif;
}
.nav-logo {
    font-size: 1.7rem;
    min-width: 11rem;
}


.logo-text {
    display: flex;
    flex-direction: column;
    font-family: Barrio, Inter, sans-serif;
}

.menu-wrap {
    display: flex;
    padding-right: 5px;
    font-size: 1.1em;
    min-width: 33vw;
}

.menu-wrap ul {
    display: flex;
    align-items: center;
    list-style: none;
}

.menu-wrap a {
    text-decoration: none;
    padding: 10px 10px;
    border-radius: .3em;
    transition: all ease-in .3s;
}

.menu-wrap a:visited {
    text-decoration: none;
    color: inherit;
}

.menu-wrap a:hover {
    color: #fff;
    background: var(--primary);
}

/*.nav-logo-short {*/
/*    display: none;*/
/*}*/


/*///////*/
/* Dropdown */
#menuToggle {
    display: none;
}

.dropdown {
    display: none;
}


/*///////*/
/* Dropdown Button */
@media screen and (max-width: 800px) {
    /*      LOGO FOR MEDIUM SIZE*/
    /*.nav-logo {*/
    /*    display: none;*/
    /*}*/
    .menu-wrap {
        display: none;
    }

    /*.nav-logo-short {*/
    /*    display: flex;*/
    /*    align-items: center;*/
    /*    justify-content: flex-end;*/
    /*    min-width: 10vw;*/
    /*    margin-left: 20px;*/
    /*    font-size: 1.7rem;*/
    /*    font-family: Barrio, Inter, sans-serif;*/
    /*}*/

    .logo-text {
        display: block;
    }

    .nav-checkbox {
        display: flex;
    }


    /*      DROP DOWN MENU STARTS HERE      */
    .dropdown {
        display: block;
        position: relative;
        padding: 10px 5px 0 0;
        margin-left: auto;
        margin-right: 10px;
    }

    #menuToggle {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        position: fixed;
        top: 50px;
        right: 50px;
        z-index: 1;
        -webkit-user-select: none;
        user-select: none;
    }

    #menuToggle a {
        text-decoration: none;
        color: #232323;
        transition: color 0.3s ease;
    }

    #menuToggle input {
        display: block;
        width: 40px;
        height: 32px;
        position: absolute;
        top: -25px;
        left: -5px;
        cursor: pointer;
        opacity: 0;
        z-index: 99;
        -webkit-touch-callout: none;
    }

    #menuToggle span {
        display: block;
        width: 33px;
        height: 4px;
        margin-bottom: 5px;
        position: relative;
        background: #cdcdcd;
        border-radius: 3px;
        z-index: 1;
        transform-origin: 4px 0px;
        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
        opacity 0.55s ease;
        top: -20px;
    }

    #menuToggle span:first-child {
        transform-origin: 0% 0%;
    }

    #menuToggle span:nth-last-child(2) {
        transform-origin: 0% 100%;
    }

    #menuToggle input:checked ~ span {
        opacity: 1;
        transform: rotate(45deg) translate(-2px, -1px);
        background: #cdcdcd;
    }

    #menuToggle input:checked ~ span:nth-last-child(3) {
        opacity: 0;
        transform: rotate(0deg) scale(0.2, 0.2);
    }

    #menuToggle input:checked ~ span:nth-last-child(2) {
        transform: rotate(-45deg) translate(0, -1px);
    }

    #menu {
        position: fixed;
        width: 300px;
        height: 100vh;
        top: 0;
        right: -300px;
        padding: 45px;
        padding-top: 68px;
        list-style-type: none;
        -webkit-font-smoothing: antialiased;
        transform-origin: 100% 0%;
        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
        background-color: rgb(32, 33, 36);
    }


    #menu li {
        padding: 10px 0;
        font-size: 30px;
        color: white;
    }
    #menu li strong {
        color: hotpink;
    }

    #menu li:hover {
        color: hotpink;
    }

    #menuToggle input:checked ~ #menu {
        transform: translate(-100%, 0);
    }
    #menuOverlay {
        display: none;
        position: fixed;
        top: 74px;
        left: 0;
        width: 100vw;
        height: 100vh;
        background-color: rgba(0, 0, 0, 0.5);
        pointer-events: none;
    }
    #menuToggle input:checked ~ #menuOverlay {
        display: block;
    }

}


    @media screen and (max-width: 640px) {
        /*      LOGO FOR SMALL SIZE*/
        .nav-logo-short {
            display: flex;
            align-items: center;
            justify-content: flex-end;
            min-width: 12vw;
            margin-left: 20px;
            font-size: 1.7rem;
            font-family: Barrio, Inter, sans-serif;
        }

        .logo-text {
            display: none;
        }
    }

